<resources>
    <string name="app_name">Survivors Of The Apocalypse</string>
    <string name="title_activity_main">Survivors of the Apocalypse</string>
    <string name="wood_resource">Wood: </string>
    <string name="number_placeholder">##</string>
    <string name="food_resource">Food: </string>
    <string name="new_game">New Game</string>
    <string name="num_players">Number of players</string>
    <string name="title_new_game">Survivors of the Appocalyps - New Game</string>
    <string name="num_players_text">Number of players:</string>
    <string name="board_size">Board size:</string>
    <string name="start_game">Start Game</string>
    <string name="board_default_width">5</string>
    <string name="board_default_height">5</string>
    <string name="player_name">Player Name</string>
    <string name="end_turn">End Turn</string>
</resources>
