<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/AppTheme.NewGameDialog"
    android:background="@android:color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_players_text"
            android:id="@+id/num_players_text_view"/>
        <Spinner
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/num_players_spinner"
            android:prompt="@string/num_players"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_size"
            android:id="@+id/board_size_text_view"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/board_width"
                android:text="@string/board_default_width"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="by"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/board_height"
                android:text="@string/board_default_height"/>
        </LinearLayout>

    </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/start_game_button"/>



</LinearLayout>